# sh-pointer

./: CMakeLists.txt  LICENSE  README
sh/: atomic_shared_ptr.hpp  atomic_wide_shared_ptr.hpp  never_null.hpp  not_null.hpp  pointer.hpp  pointer_traits.hpp  shared_ptr.hpp  wide_shared_ptr.hpp
tests/: CMakeLists.txt  test_atomic_shared_ptr.cpp  test_atomic_wide_shared_ptr.cpp  test_enable_shared_from_this.cpp  test_inert_cast.cpp  test_never_null.cpp  test_not_null.cpp  test_pointer_traits.cpp  test_shared_ptr.cpp  test_wide_shared_ptr.cpp
